--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
 sc0/data.db
-backup/data0.db
-backup/data1.db
+backup/
 sc0/database.py
-sc0/spiders/__pycache__/__init__.cpython-310.pyc
-sc0/spiders/__pycache__/text_spider.cpython-310.pyc
-sc0/__pycache__/__init__.cpython-310.pyc
-sc0/__pycache__/database_obs.cpython-310.pyc
-sc0/__pycache__/database.cpython-310.pyc
-sc0/__pycache__/items.cpython-310.pyc
-sc0/__pycache__/models.cpython-310.pyc
-sc0/__pycache__/pipelines.cpython-310.pyc
-sc0/__pycache__/settings.cpython-310.pyc
-backup/ensonhaber.db
-backup/sozcu.db
+sc0/spiders/__pycache__/
+sc0/__pycache__/
 sc0/ensonhaber.db
 sc0/sozcu.db
 sc0/eggs/
@@ -22,11 +12,7 @@ runner_sere
 sc0/dbs/
 build/
 sc0/dbs/sc0.db
-project.egg-info/dependency_links.txt
-project.egg-info/entry_points.txt
-project.egg-info/PKG-INFO
-project.egg-info/SOURCES.txt
-project.egg-info/top_level.txt
+project.egg-info/
 sc0/tbmm.db
 sc0/haberler.db
 sc0/eksisozluk.db
